--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,5 @@ lib_deps =
 	adafruit/Adafruit VL53L1X@^3.1.1
 	sparkfun/SparkFun VL53L1X 4m Laser Distance Sensor@^1.2.12
 	mikalhart/TinyGPSPlus@^1.1.0
-    plerup/espsoftwareserial@^6.12.7  # This is the correct SoftwareSerial library for ESP32
+	plerup/espsoftwareserial@^6.12.7
+	adafruit/Adafruit ADS1X15 @ ^1.1.2
